fix: change title size, bg positions, items gap

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -414,6 +414,16 @@ img {
   border-radius: 20px;
 }
 
+.counter-consist__list-bg2 {
+  display: flex;
+  align-items: flex-end;
+  justify-content: center;
+  max-width: 370px;
+  height: 252px;
+  background: linear-gradient(90deg, #fff 0%, rgba(174, 177, 181, 0.8) 100%);
+  border-radius: 20px;
+}
+
 .counter-consist__list-wrapper {
   display: flex;
   flex-direction: column;
@@ -895,6 +905,16 @@ img {
 .contur-consist__list-bg {
   display: flex;
   align-items: center;
+  justify-content: center;
+  max-width: 100%;
+  height: 225px;
+  background: linear-gradient(90deg, #fff 0%, rgba(174, 177, 181, 0.8) 100%);
+  border-radius: 30px;
+}
+
+.contur-consist__list-bg2 {
+  display: flex;
+  align-items: flex-end;
   justify-content: center;
   max-width: 100%;
   height: 225px;
@@ -1982,13 +2002,6 @@ img {
     background-position: bottom right;
   }
 
-  .counter-principle__list-item5 {
-    background: url('../images/imgs/20.png');
-    background-repeat: no-repeat;
-    background-size: contain;
-    background-position: bottom right;
-  }
-
   .counter-principle__item5-text {
     max-width: 200px;
   }
@@ -2024,6 +2037,27 @@ img {
   .counter-principle__list-item3,
   .counter-principle__list-item4 {
     width: 100%;
+    padding: 25px 0 0 20px;
+  }
+
+  .counter-principle__list-item5 {
+    padding: 15px;
+    background: url('../images/imgs/20.png');
+    background-repeat: no-repeat;
+    background-size: 45%;
+    background-position: bottom right;
+  }
+
+  .counter-principle__item1-text {
+    max-width: 150px;
+  }
+
+  .counter-principle__item2-text {
+    max-width: 150px;
+  }
+
+  .counter-principle__item3-text {
+    max-width: 100px;
   }
 
   .contur {
@@ -2044,6 +2078,10 @@ img {
   .contur-pluses__item2-wrapper,
   .contur-pluses__item3-wrapper {
     padding: 25px;
+    gap: 15px;
+  }
+
+  .counter-pluses__item4-wrapper {
     gap: 15px;
   }
 
@@ -2075,8 +2113,11 @@ img {
     left: 0;
   }
 
-  .complex__title {
-    font-size: 27px;
+  .complex__title,
+  .counter__title,
+  .contur__title,
+  .curator__title {
+    font-size: 24px;
   }
 
   .complex__badge {
@@ -2121,7 +2162,10 @@ img {
     background-size: cover;
   }
 
-  .curator-pluses__item1,
+  .curator-pluses__item1 {
+    width: 320px;
+  }
+
   .curator-pluses__item2 {
     width: 320px;
     background-size: cover;
